# wxhelper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/base/: CMakeLists.txt
app/base/src/: memory.cc  thread_pool.cc  utils.cc
app/base/src/include/: base_config.h  function_resolver.h  memory.h  noncopyable.h  singleton.h  thread_pool.h  utils.h  win_header.h
app/injector/: CMakeLists.txt
app/injector/src/: injector.cc
app/wxhelper/: CMakeLists.txt
app/wxhelper/src/: chat_controller.cc  chat_controller.h  chat_room_controller.cc  chat_room_controller.h  client_socket.cc  client_socket.h  config.cc  config.h  contacts_controller.cc  contacts_controller.h  db.cc  db.h  db_controller.cc  db_controller.h  dllMain.cc  global_manager.cc  global_manager.h  hook.cc  hook.h  hook_controller.cc  hook_controller.h  http_client.cc  http_client.h  http_controller.h  http_router.cc  http_router.h  http_server.cc  http_server.h  http_url_handler.cc  http_url_handler.h  json_utils.cc  json_utils.h  misc_controller.cc  misc_controller.h  offset.h  sqlite_function.h  sync_msg_hook.cc  sync_msg_hook.h  wechat_db.cc  wechat_db.h  (+10 more)
cmake/: detours.cmake
doc/: 3.9.2.23.md  3.9.2.26.md  3.9.5.81.md  3.9.7.29.md  3.9.8.25.md  3.9.9.43.md  postman.json
go_client/: main.go
go_client/tcpserver/: tcpserver.go
java/: WeChatHookNettyServer.java  WeChatHookUtil.java
java_client/: README.md  pom.xml
java_client/src/main/java/com/example/wxhk/: WxhkApplication.java
java_client/src/main/java/com/example/wxhk/constant/: WxMsgType.java
java_client/src/main/java/com/example/wxhk/controller/: WxMsgController.java
java_client/src/main/java/com/example/wxhk/infe/: Resp.java  SendMsg.java
java_client/src/main/java/com/example/wxhk/model/: PrivateChatMsg.java
java_client/src/main/java/com/example/wxhk/model/dto/: PayoutInformation.java
java_client/src/main/java/com/example/wxhk/model/request/: AddFriends.java  ConfirmThePayment.java  FindWeChat.java  ForwardMessages.java  GetGroupMembers.java  GetsTheNicknameOfAGroupMember.java  IncreaseGroupMembership.java  OpenHook.java  SendAtText.java  SendFile.java  SendImg.java  SendMsg.java  SendText.java  ThroughFriends.java
java_client/src/main/java/com/example/wxhk/model/response/: ContactList.java  GroupMembers.java
java_client/src/main/java/com/example/wxhk/msg/: WxMsgHandle.java
java_client/src/main/java/com/example/wxhk/server/: WxSmgServer.java
java_client/src/main/java/com/example/wxhk/server/impl/: WxSmgServerImpl.java
java_client/src/main/java/com/example/wxhk/tcp/vertx/: ArrHandle.java  InitWeChat.java  VertxTcp.java
java_client/src/main/java/com/example/wxhk/util/: HttpAsyncUtil.java  HttpSendUtil.java  HttpSyncUtil.java
java_client/src/main/resources/: application.properties  logback-spring.xml  spy.properties
java_client/src/test/java/com/example/wxhk/: WxhkApplicationTests.java
java_client/src/test/java/com/example/wxhk/tcp/: HttpAsyncUtilTest.java  XmlTest.java
java_client/src/test/java/com/example/wxhk/util/: HttpSendUtilTest.java
nodejs_client/: tcp_server.js
nodejs_client_ts/: README.md  package-lock.json  package.json  tsconfig.json
nodejs_client_ts/example/: ding-dong-bot.ts
nodejs_client_ts/src/: index.ts  tcp_server.ts
nodejs_client_ts/src/utils/: messageStore.ts  mod.ts
python/: client.py  decrpt.py  decrypt.py  http_server.py  readme.md  tcpserver.py
python/3.9.5.81/: http_client.py
script/ghidra_script/: 3.9.11.25fid.fidb  FindCallScript.java  FindMarsScript.java  FindSqliteCloseScript.java  GraphFunctionFactory.java  NamedScript.java  RenameScript.java  Sqllite3Script.java
source/: CMakeLists.txt  ConsoleApplication.cc  ConsoleApplication.cpp  getopt.h  injector.cc
src/: account_mgr.cc  account_mgr.h  api.cc  api.h  api_route.h  base64.cpp  base64.h  base_mgr.cc  base_mgr.h  chat_room.cc  chat_room.h  chat_room_mgr.cc  chat_room_mgr.h  common.cc  common.h  config.cc  config.h  confirm_receipt.cc  confirm_receipt.h  contact.cc  contact.h  contact_mgr.cc  contact_mgr.h  db.cc  db.h  db_operation.cc  db_operation.h  dllMain.cc  download.cc  download.h  export.asm  export.h  forward.cc  forward.h  framework.h  get_db_handle.cc  get_db_handle.h  global_context.cc  global_context.h  handler.h  (+63 more)
tool/injector/: readme.md
weChatHook-java/: README.md  pom.xml
weChatHook-java/src/main/java/com/example/client/: WeChatHookClient.java
weChatHook-java/src/main/java/com/example/service/: WeChatHookNettyServer.java
